--- a/index.html
+++ b/index.html
@@ -1,225 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Bắn Súng</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-        }
-
-        canvas {
-            display: block;
-            margin: 0 auto;
-            background: url('https://via.placeholder.com/800x600') center/cover;
-        }
-
-        #score {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            font-size: 20px;
-            z-index: 1000;
-        }
-
-        #menu, #gameOver {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            z-index: 1000;
-        }
-
-        #menu button, #gameOver button {
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-
-        #gameOver {
-            display: none;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Game Bắn Súng</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #111;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+      margin: 0 auto;
+      background: #000;
+    }
+  </style>
 </head>
 <body>
-    <div id="menu">
-        <h1>Game Bắn Súng</h1>
-        <button id="playButton">Play</button>
-    </div>
+  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <script>
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
 
-    <div id="gameOver">
-        <h1>Game Over</h1>
-        <p>Score: <span id="finalScore">0</span></p>
-        <button id="retryButton">Play Again</button>
-    </div>
+    let player = { x: 375, y: 550, w: 50, h: 20, speed: 5 };
+    let bullets = [];
+    let enemies = [];
 
-    <div id="score">Score: 0</div>
-    <canvas id="gameCanvas"></canvas>
+    document.addEventListener("keydown", e => {
+      if (e.key === "ArrowLeft") player.x -= player.speed;
+      if (e.key === "ArrowRight") player.x += player.speed;
+      if (e.key === " ") {
+        bullets.push({ x: player.x + player.w/2 - 2, y: player.y, w: 4, h: 10, speed: 7 });
+      }
+    });
 
-    <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
+    function spawnEnemy() {
+      enemies.push({ x: Math.random() * 760, y: 0, w: 40, h: 20, speed: 2 });
+    }
 
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+    function update() {
+      bullets.forEach(b => b.y -= b.speed);
+      enemies.forEach(e => e.y += e.speed);
+      bullets = bullets.filter(b => b.y > 0);
+      enemies = enemies.filter(e => e.y < 600);
 
-        const menu = document.getElementById('menu');
-        const gameOverScreen = document.getElementById('gameOver');
-        const playButton = document.getElementById('playButton');
-        const retryButton = document.getElementById('retryButton');
-        const scoreDisplay = document.getElementById('score');
-        const finalScore = document.getElementById('finalScore');
-
-        let gameRunning = false;
-        let score = 0;
-        let speedBoost = false;
-
-        const player = {
-            x: canvas.width / 2,
-            y: canvas.height - 50,
-            width: 50,
-            height: 50,
-            color: 'blue',
-            speed: 10
-        };
-
-        const bullets = [];
-        const enemies = [];
-
-        function drawPlayer() {
-            ctx.fillStyle = player.color;
-            ctx.fillRect(player.x, player.y, player.width, player.height);
+      for (let i = enemies.length - 1; i >= 0; i--) {
+        for (let j = bullets.length - 1; j >= 0; j--) {
+          const e = enemies[i], b = bullets[j];
+          if (b.x < e.x + e.w && b.x + b.w > e.x && b.y < e.y + e.h && b.y + b.h > e.y) {
+            enemies.splice(i, 1);
+            bullets.splice(j, 1);
+            break;
+          }
         }
+      }
+    }
 
-        function shootBullet() {
-            bullets.push({
-                x: player.x + player.width / 2 - 5,
-                y: player.y,
-                width: 10,
-                height: 20,
-                color: 'yellow',
-                speed: 10
-            });
-        }
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "white";
+      ctx.fillRect(player.x, player.y, player.w, player.h);
+      bullets.forEach(b => ctx.fillRect(b.x, b.y, b.w, b.h));
+      enemies.forEach(e => ctx.fillRect(e.x, e.y, e.w, e.h));
+    }
 
-        function drawBullets() {
-            bullets.forEach((bullet, index) => {
-                bullet.y -= bullet.speed;
-                if (bullet.y < 0) {
-                    bullets.splice(index, 1);
-                } else {
-                    ctx.fillStyle = bullet.color;
-                    ctx.fillRect(bullet.x, bullet.y, bullet.width, bullet.height);
-                }
-            });
-        }
+    setInterval(() => {
+      update();
+      draw();
+    }, 1000 / 60);
 
-        function spawnEnemy() {
-            enemies.push({
-                x: Math.random() * (canvas.width - 50),
-                y: -50,
-                width: 50,
-                height: 50,
-                color: 'red',
-                speed: 3
-            });
-        }
-
-        function drawEnemies() {
-            enemies.forEach((enemy, index) => {
-                enemy.y += enemy.speed;
-                if (enemy.y > canvas.height) {
-                    endGame();
-                } else {
-                    ctx.fillStyle = enemy.color;
-                    ctx.fillRect(enemy.x, enemy.y, enemy.width, enemy.height);
-                }
-            });
-        }
-
-        function checkCollisions() {
-            bullets.forEach((bullet, bIndex) => {
-                enemies.forEach((enemy, eIndex) => {
-                    if (
-                        bullet.x < enemy.x + enemy.width &&
-                        bullet.x + bullet.width > enemy.x &&
-                        bullet.y < enemy.y + enemy.height &&
-                        bullet.y + bullet.height > enemy.y
-                    ) {
-                        bullets.splice(bIndex, 1);
-                        enemies.splice(eIndex, 1);
-                        score += 10;
-                        scoreDisplay.textContent = `Score: ${score}`;
-                    }
-                });
-            });
-        }
-
-        function endGame() {
-            gameRunning = false;
-            gameOverScreen.style.display = 'block';
-            finalScore.textContent = score;
-        }
-
-        function resetGame() {
-            score = 0;
-            scoreDisplay.textContent = `Score: ${score}`;
-            bullets.length = 0;
-            enemies.length = 0;
-            player.x = canvas.width / 2;
-            player.y = canvas.height - 50;
-            gameOverScreen.style.display = 'none';
-            gameRunning = true;
-            gameLoop();
-        }
-
-        function gameLoop() {
-            if (!gameRunning) return;
-
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            drawPlayer();
-            drawBullets();
-            drawEnemies();
-            checkCollisions();
-            requestAnimationFrame(gameLoop);
-        }
-
-        window.addEventListener('keydown', (e) => {
-            if (!gameRunning) return;
-
-            if (e.key === 'ArrowLeft' && player.x > 0) {
-                player.x -= speedBoost ? player.speed * 2 : player.speed;
-            } else if (e.key === 'ArrowRight' && player.x < canvas.width - player.width) {
-                player.x += speedBoost ? player.speed * 2 : player.speed;
-            } else if (e.key === ' ') {
-                shootBullet();
-            } else if (e.key === 'Shift') {
-                speedBoost = true;
-            }
-        });
-
-        window.addEventListener('keyup', (e) => {
-            if (e.key === 'Shift') {
-                speedBoost = false;
-            }
-        });
-
-        playButton.addEventListener('click', () => {
-            menu.style.display = 'none';
-            gameRunning = true;
-            gameLoop();
-            // Thay đổi khoảng thời gian giữa các lần địch xuất hiện
-            setInterval(spawnEnemy, 3000); // Địch spawn mỗi 3 giây thay vì mỗi giây
-        });
-
-        retryButton.addEventListener('click', resetGame);
-    </script>
+    setInterval(spawnEnemy, 1000);
+  </script>
 </body>
 </html>
